automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.read_csv('')"
+   ]
   },
   {
    "cell_type": "markdown",
