automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,12 +42,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_csv('/Data/Zipcode_Demos.')"
+    "import pandas as pd\n",
+    "pd.read_csv('/Data/Zipcode_Demos.csv')"
    ]
   },
   {
