automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2079,9 +2079,11 @@
    "source": [
     "#Hint: here's a useful programming pattern to use.\n",
     "try:\n",
+    "    pass\n",
     "    #do something\n",
     "except Exception as e:\n",
-    "    #handle your exception e"
+    "    #handle your exception e\n",
+    "    pass"
    ]
   },
   {
