automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2064,26 +2064,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-10-13f6e15364f1>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-13f6e15364f1>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    except Exception as e:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Hint: here's a useful programming pattern to use.\n",
-    "try:\n",
-    "    pass\n",
-    "    #do something\n",
-    "except Exception as e:\n",
-    "    #handle your exception e\n",
-    "    pass"
+    "for i in range(1500,2000):\n",
+    "    try:\n",
+    "        df = pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', nrows=i)\n",
+    "    except:\n",
+    "        print('First failure at: {}'.format(i))\n",
+    "        break\n",
+    "df1 = pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', nrows=i-1)\n",
+    "print(len(df))\n",
+    "df1.head()"
    ]
   },
   {
