--- a/index.ipynb
+++ b/index.ipynb
@@ -2064,9 +2064,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First failure at: 1962\n",
+      "1961\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>date</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>text</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>pomGBqfbxcqPv14c3XH-ZQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-11-13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>dDl8zu1vWPdKGihJrwQbpw</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I love this place! My fiance And I go here atl...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>jtQARsP6P-LbkyjbO1qNGg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-10-23</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>LZp4UX5zK3e-c5ZGSeo3kA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Terrible. Dry corn bread. Rib tips were all fa...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ums3gaP2qM3W1XcA5r6SsQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-09-05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>jsDu6QEJHbwP2Blom1PLCA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Delicious healthy food. The steak is amazing. ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>vgfcTvK81oD4r50NMjU2Ag</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2011-02-25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>pfavA0hr3nyqO61oupj-lA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>This place sucks. The customer service is horr...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>yFumR3CWzpfvTH2FCthvVw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-06-15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STiFMww2z31siPY7BWNC2g</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I have been an Emerald Club member for a numbe...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 0             business_id cool        date  funny  \\\n",
+       "0          1  pomGBqfbxcqPv14c3XH-ZQ    0  2012-11-13    0.0   \n",
+       "1          2  jtQARsP6P-LbkyjbO1qNGg    1  2014-10-23    1.0   \n",
+       "2          4  Ums3gaP2qM3W1XcA5r6SsQ    0  2014-09-05    0.0   \n",
+       "3          5  vgfcTvK81oD4r50NMjU2Ag    0  2011-02-25    0.0   \n",
+       "4         10  yFumR3CWzpfvTH2FCthvVw    0  2016-06-15    0.0   \n",
+       "\n",
+       "                review_id  stars  \\\n",
+       "0  dDl8zu1vWPdKGihJrwQbpw    5.0   \n",
+       "1  LZp4UX5zK3e-c5ZGSeo3kA    1.0   \n",
+       "2  jsDu6QEJHbwP2Blom1PLCA    5.0   \n",
+       "3  pfavA0hr3nyqO61oupj-lA    1.0   \n",
+       "4  STiFMww2z31siPY7BWNC2g    5.0   \n",
+       "\n",
+       "                                                text  useful  \\\n",
+       "0  I love this place! My fiance And I go here atl...     0.0   \n",
+       "1  Terrible. Dry corn bread. Rib tips were all fa...     3.0   \n",
+       "2  Delicious healthy food. The steak is amazing. ...     0.0   \n",
+       "3  This place sucks. The customer service is horr...     2.0   \n",
+       "4  I have been an Emerald Club member for a numbe...     0.0   \n",
+       "\n",
+       "                  user_id  \n",
+       "0  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "1  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "2  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "3  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "4  TlvV-xJhmh7LCwJYXkV-cg  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for i in range(1500,2000):\n",
     "    try:\n",
