automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2227,14 +2227,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>date</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>text</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1956</th>\n",
+       "      <td>4993</td>\n",
+       "      <td>u8C8pRvaHXg3PgDrsUHJHQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-08-08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>gXmHGBSBBz2-uHdvGf4lZQ</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>just went to a retirement party upstairs and t...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>tFa-r1pxZh04FjxNSEQgcQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957</th>\n",
+       "      <td>4998</td>\n",
+       "      <td>-9nai28tnoylwViuJVrYEQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015-03-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>u-zqCN_IXfypJIUzIVUuzw</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Great restaurant and great atmosphere.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958</th>\n",
+       "      <td>I had an awesome great time with friends.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959</th>\n",
+       "      <td>I loved the tapas and the excellent paella.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>I can't wait to come back soon.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>otDVyX37h61WEbqPLEjCmQ</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Unnamed: 0             business_id  \\\n",
+       "1956                                         4993  u8C8pRvaHXg3PgDrsUHJHQ   \n",
+       "1957                                         4998  -9nai28tnoylwViuJVrYEQ   \n",
+       "1958    I had an awesome great time with friends.                     NaN   \n",
+       "1959  I loved the tapas and the excellent paella.                     NaN   \n",
+       "1960              I can't wait to come back soon.                       0   \n",
+       "\n",
+       "                        cool        date  funny               review_id  \\\n",
+       "1956                       0  2016-08-08    0.0  gXmHGBSBBz2-uHdvGf4lZQ   \n",
+       "1957                       0  2015-03-22    0.0  u-zqCN_IXfypJIUzIVUuzw   \n",
+       "1958                     NaN         NaN    NaN                     NaN   \n",
+       "1959                     NaN         NaN    NaN                     NaN   \n",
+       "1960  otDVyX37h61WEbqPLEjCmQ         NaN    NaN                     NaN   \n",
+       "\n",
+       "      stars                                               text  useful  \\\n",
+       "1956    2.0  just went to a retirement party upstairs and t...     1.0   \n",
+       "1957    5.0             Great restaurant and great atmosphere.     NaN   \n",
+       "1958    NaN                                                NaN     NaN   \n",
+       "1959    NaN                                                NaN     NaN   \n",
+       "1960    NaN                                                NaN     NaN   \n",
+       "\n",
+       "                     user_id  \n",
+       "1956  tFa-r1pxZh04FjxNSEQgcQ  \n",
+       "1957                     NaN  \n",
+       "1958                     NaN  \n",
+       "1959                     NaN  \n",
+       "1960                     NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df1."
+    "df1.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
