automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2227,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2265,111 +2265,111 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1956</th>\n",
-       "      <td>4993</td>\n",
-       "      <td>u8C8pRvaHXg3PgDrsUHJHQ</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>pomGBqfbxcqPv14c3XH-ZQ</td>\n",
        "      <td>0</td>\n",
-       "      <td>2016-08-08</td>\n",
+       "      <td>2012-11-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>gXmHGBSBBz2-uHdvGf4lZQ</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>just went to a retirement party upstairs and t...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>tFa-r1pxZh04FjxNSEQgcQ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1957</th>\n",
-       "      <td>4998</td>\n",
-       "      <td>-9nai28tnoylwViuJVrYEQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-03-22</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>u-zqCN_IXfypJIUzIVUuzw</td>\n",
+       "      <td>dDl8zu1vWPdKGihJrwQbpw</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>Great restaurant and great atmosphere.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>I love this place! My fiance And I go here atl...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1958</th>\n",
-       "      <td>I had an awesome great time with friends.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>jtQARsP6P-LbkyjbO1qNGg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-10-23</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>LZp4UX5zK3e-c5ZGSeo3kA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Terrible. Dry corn bread. Rib tips were all fa...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1959</th>\n",
-       "      <td>I loved the tapas and the excellent paella.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960</th>\n",
-       "      <td>I can't wait to come back soon.</td>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ums3gaP2qM3W1XcA5r6SsQ</td>\n",
        "      <td>0</td>\n",
-       "      <td>otDVyX37h61WEbqPLEjCmQ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2014-09-05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>jsDu6QEJHbwP2Blom1PLCA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Delicious healthy food. The steak is amazing. ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>vgfcTvK81oD4r50NMjU2Ag</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2011-02-25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>pfavA0hr3nyqO61oupj-lA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>This place sucks. The customer service is horr...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>yFumR3CWzpfvTH2FCthvVw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-06-15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STiFMww2z31siPY7BWNC2g</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I have been an Emerald Club member for a numbe...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       Unnamed: 0             business_id  \\\n",
-       "1956                                         4993  u8C8pRvaHXg3PgDrsUHJHQ   \n",
-       "1957                                         4998  -9nai28tnoylwViuJVrYEQ   \n",
-       "1958    I had an awesome great time with friends.                     NaN   \n",
-       "1959  I loved the tapas and the excellent paella.                     NaN   \n",
-       "1960              I can't wait to come back soon.                       0   \n",
+       "  Unnamed: 0             business_id cool        date  funny  \\\n",
+       "0          1  pomGBqfbxcqPv14c3XH-ZQ    0  2012-11-13    0.0   \n",
+       "1          2  jtQARsP6P-LbkyjbO1qNGg    1  2014-10-23    1.0   \n",
+       "2          4  Ums3gaP2qM3W1XcA5r6SsQ    0  2014-09-05    0.0   \n",
+       "3          5  vgfcTvK81oD4r50NMjU2Ag    0  2011-02-25    0.0   \n",
+       "4         10  yFumR3CWzpfvTH2FCthvVw    0  2016-06-15    0.0   \n",
        "\n",
-       "                        cool        date  funny               review_id  \\\n",
-       "1956                       0  2016-08-08    0.0  gXmHGBSBBz2-uHdvGf4lZQ   \n",
-       "1957                       0  2015-03-22    0.0  u-zqCN_IXfypJIUzIVUuzw   \n",
-       "1958                     NaN         NaN    NaN                     NaN   \n",
-       "1959                     NaN         NaN    NaN                     NaN   \n",
-       "1960  otDVyX37h61WEbqPLEjCmQ         NaN    NaN                     NaN   \n",
+       "                review_id  stars  \\\n",
+       "0  dDl8zu1vWPdKGihJrwQbpw    5.0   \n",
+       "1  LZp4UX5zK3e-c5ZGSeo3kA    1.0   \n",
+       "2  jsDu6QEJHbwP2Blom1PLCA    5.0   \n",
+       "3  pfavA0hr3nyqO61oupj-lA    1.0   \n",
+       "4  STiFMww2z31siPY7BWNC2g    5.0   \n",
        "\n",
-       "      stars                                               text  useful  \\\n",
-       "1956    2.0  just went to a retirement party upstairs and t...     1.0   \n",
-       "1957    5.0             Great restaurant and great atmosphere.     NaN   \n",
-       "1958    NaN                                                NaN     NaN   \n",
-       "1959    NaN                                                NaN     NaN   \n",
-       "1960    NaN                                                NaN     NaN   \n",
+       "                                                text  useful  \\\n",
+       "0  I love this place! My fiance And I go here atl...     0.0   \n",
+       "1  Terrible. Dry corn bread. Rib tips were all fa...     3.0   \n",
+       "2  Delicious healthy food. The steak is amazing. ...     0.0   \n",
+       "3  This place sucks. The customer service is horr...     2.0   \n",
+       "4  I have been an Emerald Club member for a numbe...     0.0   \n",
        "\n",
-       "                     user_id  \n",
-       "1956  tFa-r1pxZh04FjxNSEQgcQ  \n",
-       "1957                     NaN  \n",
-       "1958                     NaN  \n",
-       "1959                     NaN  \n",
-       "1960                     NaN  "
+       "                  user_id  \n",
+       "0  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "1  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "2  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "3  msQe1u7Z_XuqjGoqhB0J5g  \n",
+       "4  TlvV-xJhmh7LCwJYXkV-cg  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.tail()"
+    "df1.head()"
    ]
   },
   {
